context created to share state accross app

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -9,6 +9,8 @@
 .option{
     transition: .3s all;
     font-weight: 300;
+    position: relative;
+    width: fit-content;
 }
 .option:hover{
     text-decoration: underline;
