--- a/src/pages/cart/style.css
+++ b/src/pages/cart/style.css
@@ -1,6 +1,6 @@
 .carted-item-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 400px);
+    grid-template-columns: repeat(auto-fit,minmax(300px,400px));
     grid-gap: 1rem;
     justify-content: center;
 }
