--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -6,25 +6,27 @@
     position: relative;
     overflow: hidden;
 }
-.grid{
+
+.grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill,300px);
+    grid-template-columns: repeat(auto-fill, 300px);
     grid-gap: 10px;
     justify-content: center;
 }
-.image-container{
+
+.image-container {
     width: 100%;
-    height:200px;
+    height: 200px;
     overflow: hidden;
 }
 
-.image-container img{
+.image-container img {
     object-fit: contain;
     width: 100%;
     height: 100%;
 }
 
-.product-container{
+.product-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -32,7 +34,7 @@
     justify-content: space-between;
 }
 
-.overlay{
+.overlay {
     transition: .3s all;
     position: absolute;
     top: 100%;
@@ -49,11 +51,11 @@
     flex-direction: column;
 }
 
-.overlay .btn-group button{
+.overlay .btn-group button {
     margin: 5px;
 }
 
-.product-card:hover .overlay{
+.product-card:hover .overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -67,4 +69,43 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+/* search - functionality */
+
+.search-and-filter-container {
+    margin: 1rem 0rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-and-filter-container input {
+    padding: .35rem;
+    border-radius: 3px;
+    border: none;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .3);
+}
+
+.search-and-filter-container input:focus {
+    outline: none;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, .5);
+}
+
+.filter {
+    padding: .35rem;
+    border-radius: 3px;
+    border: none;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .3);
+    margin: 10px;
+    cursor: pointer;
+}
+
+.filter:focus {
+    outline: none;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, .5);
+}
+
+.no-data-found{
+    max-width: 500px !important;
 }
