--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -84,6 +84,8 @@
     padding: .35rem;
     border-radius: 3px;
     border: none;
+    width: 30%;
+    max-width: 200px;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .3);
 }
 
