--- a/src/pages/auth/style.css
+++ b/src/pages/auth/style.css
@@ -18,6 +18,11 @@
     grid-template-columns: 1fr 1.4fr;
     place-items: center;
 }
+.logo-img{
+    width: 35px;
+    height: 40px;
+    margin-right: 15px;
+}
 
 @media (max-width:700px) {
     .auth-img {
@@ -31,17 +36,25 @@
     .auth-main-container .large-title {
         text-align: center;
         margin-bottom: 50px;
-        font-size: 3rem;
-        width: 80vw;
-    }    
+        font-size: 30px;
+        font-weight: 600;
+    }
+
+    .logo-img {
+        width: 30px;
+        height: 30px;
+    }
 }
+
 .auth-img lottie-player {
     max-width: 500px;
 }
-.auth-form{
-    box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+
+.auth-form {
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
     padding: 1rem 2rem;
 }
+
 .auth-container input {
     margin-top: 10px;
 }
