--- a/src/components/admin edit prod/style.css
+++ b/src/components/admin edit prod/style.css
@@ -1,10 +1,10 @@
-.edit-prod-form-container{
+.edit-prod-form-container {
     position: fixed;
     width: 100vw;
     height: 100%;
     z-index: 1000;
     backdrop-filter: blur(10px);
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0, 0, 0, .7);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,46 +12,50 @@
 }
 
 
-.edit-prod-form-container input{
+.edit-prod-form-container input {
     margin: 10px 0px;
     width: 100%;
 }
-.edit-prod-form-container input:focus{
-    box-shadow:none;
+
+.edit-prod-form-container input:focus {
+    box-shadow: none;
 }
-.edit-prod-form-container h1{
+
+.edit-prod-form-container h1 {
     text-align: center;
 }
-.edit-prod-form{
+
+.edit-prod-form {
     width: 90%;
     max-width: 500px;
     background-color: rgb(246, 251, 251);
-    padding:3rem 2rem;
+    padding: 3rem 2rem;
     border-radius: 3px;
     position: relative;
+    margin: 10ex 0px;
 }
 
-.edit-prod-form-container .close{
+.edit-prod-form-container .close {
     position: absolute;
-    top:10px;
+    top: 10px;
     right: 10px;
     font-size: 2rem;
     font-weight: 600;
     cursor: pointer;
 }
 
-.edit-prod-form-container .black-title-lg{
+.edit-prod-form-container .black-title-lg {
     margin-bottom: 2rem;
     font-weight: 600;
 }
 
-.edit-prod-options{
+.edit-prod-options {
     margin-top: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.admin-prod-description{
+.admin-prod-description {
     width: 100%;
 }
