--- a/src/pages/cart/style.css
+++ b/src/pages/cart/style.css
@@ -41,5 +41,15 @@
 
 .taggy-title-container{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+.taggy-title-container .normal-back{
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+    font-size: 2rem;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
