--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -10,6 +10,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, 300px);
+    width: 100%;
     grid-gap: 10px;
     justify-content: center;
 }
