--- a/src/pages/productInfo/style.css
+++ b/src/pages/productInfo/style.css
@@ -1,14 +1,15 @@
-.product-image-container{
+.product-image-container {
     height: 400px;
     overflow: hidden;
-    box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
     margin: 1rem 0px;
     padding: 1rem;
     width: fit-content;
+    width: 100%;
 }
 
-.product-image-container img{
+.product-image-container img {
     object-fit: contain;
     width: 100%;
     height: 100%;
@@ -16,13 +17,18 @@
 
 
 
-.product-info-container{
+.product-info-container {
     margin: auto;
     max-width: 800px;
 }
 
-.price-container{
+.price-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    min-width: 100%;
+}
+
+.price-container button {
+    margin-left: 1rem;
 }
