--- a/src/components/profile edit/style.css
+++ b/src/components/profile edit/style.css
@@ -62,8 +62,8 @@
     border-radius: 50%;
     overflow: hidden;
     margin: auto;
-    outline: 3px solid rgb(0, 98, 255);
-    outline-offset: 3px;
+    box-shadow: 0px 0px 13px 5px rgb(0, 98, 255);
+    border: 2px solid white;
 }
 
 .profile_image_container img {
@@ -84,19 +84,17 @@
     position: absolute;
     right: 0;
     bottom: 10px;
-    outline: 3px solid rgb(0, 98, 255);
-    outline-offset: 2px;
+    box-shadow: 0px 0px 13px 5px rgb(0, 98, 255);
+    border: 2px solid white;
     transition: .3s all;
 }
 
 .edit-option label:hover {
-    outline: 4px solid rgb(0, 98, 255);
-    outline-offset: 4px;
+    box-shadow: 0px 0px 13px 5px rgb(0, 98, 255);
 }
 
 .delete-option label:hover {
-    outline: 4px solid rgb(236, 19, 19);
-    outline-offset: 4px;
+    box-shadow: 0px 0px 13px 5px rgb(236, 19, 19);
 }
 
 .edit-option #upload {
@@ -118,9 +116,8 @@
     position: absolute;
     left: 0;
     bottom: 10px;
-    outline: 3px solid rgb(236, 19, 19);
-    outline-offset: 2px;
     transition: .3s all;
+    border:2px solid white;
 }
 
 
