--- a/src/pages/profile/style.css
+++ b/src/pages/profile/style.css
@@ -16,8 +16,8 @@
     height: 150px;
     border-radius: 50%;
     overflow: hidden;
-    outline: 3px solid rgb(0, 98, 255);
-    outline-offset: 3px;
+    box-shadow: 0px 0px 13px 5px rgb(0, 98, 255);
+    border: 2px solid white;
 }
 
 .profile-image img {
