--- a/src/pages/cart/style.css
+++ b/src/pages/cart/style.css
@@ -53,3 +53,12 @@
     align-items: center;
     cursor: pointer;
 }
+
+/* order now bottom styles */
+
+.order_now_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+}
