--- a/src/pages/profile/style.css
+++ b/src/pages/profile/style.css
@@ -58,3 +58,20 @@
     justify-content: space-around;
     align-items: center;
 }
+
+@media (max-width:700px) {
+
+    .profile-image-and-edit-option {
+        display: flex;
+        flex-direction:column;
+        place-items: center;
+    }
+    .options-container{
+        margin-top: 10px;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
