refactored the complete code, css updated for editing comps,home page shifted as shop page home page will be diffrent like a social media home page

--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -24,3 +24,8 @@ footer p {
 .footer-content{
     padding: 1.5rem 1.5rem 0rem 1.5rem;
 }
+
+.footer-detail-container{
+    display: flex;
+    flex-direction: column;
+}
