--- a/src/components/profile edit/style.css
+++ b/src/components/profile edit/style.css
@@ -1,25 +1,30 @@
 .edit-profile-form-container {
-    position: fixed;
-    width: 100vw;
-    height: 100%;
+     position: fixed;
     z-index: 1200;
+    width: 100%;
+    height: 100%;
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, .7);
+    overflow: auto;
+    padding: 30px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: auto;
 }
 
 
 .edit-profile-form-container input {
-    margin: 10px 0px;
+    margin: 5px 0px;
     width: 100%;
+    padding: 5px 5px;
+    border-radius: 3px;
+    border: none;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, .3);
+    transition: .3s all;
 }
 
 .edit-profile-form-container input:focus {
-    box-shadow: none;
-}
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, .5);}
 
 .edit-profile-form-container h1 {
     text-align: center;
@@ -27,12 +32,12 @@
 
 .edit-profile-form {
     width: 90%;
-    max-width: 500px;
-    background-color: rgb(246, 251, 251);
-    padding: 3rem 2rem;
+    max-width: 400px;
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
     border-radius: 3px;
     position: relative;
-    margin: 10ex 0px;
+    margin:10px auto;
 }
 
 .edit-profile-form-container .close {
@@ -45,7 +50,6 @@
 }
 
 .edit-profile-form-container .black-title-lg {
-    margin-bottom: 2rem;
     font-weight: 600;
 }
 
@@ -107,6 +111,7 @@
     cursor: pointer;
     background-color: rgb(236, 19, 19);
     color: #ffffff;
+    box-shadow: 0px 0px 10px 2px rgb(236, 19, 19);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -139,3 +144,5 @@
     align-items: center;
     cursor: pointer;
 }
+
+
