--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,16 @@ a:hover {
   padding: 5px;
   border-radius: 3px;
   margin: 4px;
-  box-shadow: 0px 0px 3px  rgb(255, 42, 0);
+  border:2px solid  rgba(255, 42, 0, 0.281);
+}
+.blue-highlighted-title {
+  color: rgba(0, 81, 255, 0.678);
+  font-weight: 500;
+  background-color: rgb(173, 205, 247);
+  padding: 5px;
+  border-radius: 3px;
+  margin: 4px;
+  border:2px solid  rgba(0, 81, 255, 0.347)
 }
 
 .btn {
@@ -123,7 +132,7 @@ a:hover {
   position: absolute;
   top: 10px;
   left: 10px;
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
   font-size: 2rem;
   width: 35px;
   height: 35px;
@@ -131,11 +140,13 @@ a:hover {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  border-radius: 3px;
 }
 
 /*back button*/
 .normal-back-without-flex {
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
   font-size: 2rem;
   width: 35px;
   height: 35px;
