--- a/src/pages/productInfo/style.css
+++ b/src/pages/productInfo/style.css
@@ -22,6 +22,10 @@
     max-width: 800px;
 }
 
+.brand-container{
+    margin: 0px;
+    width: 100%;
+}
 .price-container {
     display: flex;
     justify-content: flex-start;
