--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -9,16 +9,12 @@
 }
 
 .logout {
-    color: var(--text-color);
+    color: white !important;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 300;
     margin: .5rem;
     cursor: pointer;
-}
-
-.logout:hover {
-    text-decoration: underline;
 }
 
 .option {
