--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;900&family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;400;500;700&family=Varela+Round&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;900&family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;400;500;700&family=Varela+Round&display=swap");
 
 * {
   margin: 0;
@@ -6,26 +6,24 @@
   box-sizing: border-box;
 }
 
-
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 html {
-  --hover-btn: rgb(118, 118, 118);
-  --text-color: rgb(221, 219, 219);
-  --primary: #292727;
+  --hover-btn: rgb(118, 118, 118); /*btn color on hover*/
+  --text-color: rgb(221, 219, 219); /*normal text color*/
+  --primary: #292727; /*primary color of site*/
 }
 
 a {
   color: var(--text-color);
   text-decoration: none;
   font-size: 1.2rem;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
 a:hover {
@@ -92,7 +90,7 @@ a:hover {
   padding: 5px;
   border-radius: 3px;
   margin: 4px;
-  border:2px solid  rgba(255, 42, 0, 0.281);
+  border: 2px solid rgba(255, 42, 0, 0.281);
 }
 .blue-highlighted-title {
   color: rgba(0, 81, 255, 0.678);
@@ -101,7 +99,7 @@ a:hover {
   padding: 5px;
   border-radius: 3px;
   margin: 4px;
-  border:2px solid  rgba(0, 81, 255, 0.347)
+  border: 2px solid rgba(0, 81, 255, 0.347);
 }
 
 .btn {
@@ -120,7 +118,6 @@ a:hover {
   color: var(--primary);
   text-align: center;
 }
-
 
 .taggy-title {
   background-color: rgb(252, 224, 175);
