--- a/src/pages/productInfo/style.css
+++ b/src/pages/productInfo/style.css
@@ -1,38 +1,41 @@
 .product-image-container {
-    height: 400px;
-    overflow: hidden;
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
-    border-radius: 3px;
-    margin: 1rem 0px;
-    padding: 1rem;
-    width: fit-content;
-    width: 100%;
+  height: 400px;
+  overflow: hidden;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  margin: 1rem 0px;
+  padding: 1rem;
+  width: fit-content;
+  width: 100%;
 }
 
 .product-image-container img {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
-
+.black-title {
+  font-weight: bold;
+  font-style: 20;
+}
 
 .product-info-container {
-    margin: auto;
-    max-width: 800px;
+  margin: auto;
+  max-width: 800px;
 }
 
-.brand-container{
-    margin: 0px;
-    width: 100%;
+.brand-container {
+  margin: 0px;
+  width: 100%;
 }
 .price-container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    min-width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 100%;
 }
 
 .price-container button {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
